--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
     autoRestart: true
+    numInstances: 1  # Гарантирует один экземпляр
     envVars:
       - key: TOKEN
         sync: false
