--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,20 @@
 services:
-  - type: worker
+  - type: web
     name: telegram-bot
     env: python
     pythonVersion: 3.13
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
     autoRestart: true
-    numInstances: 1  # Гарантирует один экземпляр
+    numInstances: 1
     envVars:
       - key: TOKEN
         sync: false
       - key: ADMIN_ID
         sync: false
+      - key: WEBHOOK_URL
+        sync: false
+      - key: RENDER_EXTERNAL_HOSTNAME
+        sync: false
+      - key: PORT
+        value: 10000
